# delta

./: HEADLESS_API.md  MANUAL.md  README.md  build.cmd  delta.py  delta.spec  main.py  pyproject.toml
core/: constants.py  exceptions.py  math_utils.py  models.py  project_controller.py  serializer.py  version.py
delta/: __init__.py  diagram.py  exceptions.py  export.py  logger.py  math_utils.py  models.py  project_controller.py  project_manager.py  renderer.py  serializer.py  utils.py  version.py
tests/: test_degenerate_lines.py  test_math_utils.py  test_pydantic_validation.py
tools/: make_icon.py  make_splash.py
ui/: main_window.py
ui/canvas/: __init__.py  interactor.py  renderer.py  widget.py
ui/widgets/: about_dialog.py  analysis_panel.py  base_dialog.py  canvas.py  canvas_view.py  compositions_table.py  docs_viewer.py  helpers.py  intersection_dialog.py  line_dialog.py  lines_manager.py  style_dialog.py
