[project]
name = "delta"
version = "0.4.0"
description = "Delta — инструмент для построения, визуализации и анализа тройных диаграмм состояния (Треугольник Гиббса) с поддержкой правила рычага и поиска пересечений конод."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
gui = [
    "pyside6>=6.10.1",
    "markdown>=3.10",
]

[project.scripts]
delta = "main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
    "pytest-mypy>=1.0.1",
    "types-markdown>=3.10.0.20251106",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["delta", "ui"]
